cleanup // remove hooks
add to scripts

ignore test folder

Consistent logging

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,4 @@ user_sync/resources/*
 !user_sync/resources/__init__.py
 !user_sync/resources/README.md
 !user_sync/resources/manual_url
+test_config/
