--- a/.travis.yml
+++ b/.travis.yml
@@ -2,26 +2,26 @@ language: python
 sudo: required
 dist: xenial
 before_install:
-- chmod +x .travis/*.sh
+- chmod +x .build/.travis/*.sh
 matrix:
   include:
   - env: IMG="ubuntu1604"
     python:
     - 3.6
     install:
-    - .travis/install-ubuntu.sh
+    - .build/.travis/install-ubuntu.sh
     script:
-    - .travis/build-py36.sh
-    - .travis/release.sh
+    - .build/.travis/build-py36.sh
+    - .build/.travis/release.sh
     - python setup.py test
   - env: IMG="ubuntu1604"
     python:
     - 2.7
     install:
-    - .travis/install-ubuntu.sh
+    - .build/.travis/install-ubuntu.sh
     script:
-    - .travis/build-py27.sh
-    - .travis/release.sh
+    - .build/.travis/build-py27.sh
+    - .build/.travis/release.sh
     - python setup.py test
   - env: OS="centos:7" IMG="centos7" SH="docker exec -t ${IMG} bash -c"
     services:
@@ -30,13 +30,13 @@ matrix:
     python:
     - 3.6
     before_install:
-    - chmod +x .travis/*.sh
+    - chmod +x .build/.travis/*.sh
     - docker run -d --name ${IMG} -v $(pwd):/travis -w /travis -e IMG="${IMG}" -e TRAVIS_TAG="${TRAVIS_TAG}" ${OS} tail -f /dev/null
     - docker ps
     install:
-    - $SH .travis/install-centos.sh
+    - $SH .build/.travis/install-centos.sh
     script:
-    - $SH .travis/build-py36-centos.sh
+    - $SH .build/.travis/build-py36-centos.sh
   - env: OS="centos:7" IMG="centos7" SH="docker exec -t ${IMG} bash -c"
     services:
     - docker
@@ -44,14 +44,14 @@ matrix:
     python:
     - 2.7
     before_install:
-    - chmod +x .travis/*.sh
+    - chmod +x .build/.travis/*.sh
     - docker run -d --name ${IMG} -v $(pwd):/travis -w /travis -e IMG="${IMG}" -e TRAVIS_TAG="${TRAVIS_TAG}" ${OS} tail -f /dev/null
     - docker ps
     install:
-    - $SH .travis/install-centos.sh
+    - $SH .build/.travis/install-centos.sh
     script:
-    - $SH .travis/build-py27.sh
-    - $SH .travis/release.sh
+    - $SH .build/.travis/build-py27.sh
+    - $SH .build/.travis/release.sh
     - $SH "python setup.py test"
 
 deploy:
