--- a/oneroster-config/oneroster-user-sync-config.yml
+++ b/oneroster-config/oneroster-user-sync-config.yml
@@ -64,7 +64,7 @@ adobe_users:
     # use a relative pathname, it is interpreted relative to the
     # location of this configuration file, not relative to the
     # working directory of your User Sync process.
-    umapi: "..\\test-config\\connector-umapi.yml"
+    umapi: "connector-umapi.yml"
     # An alternate form for referencing the umapi configuration allows for storage
     # of the umapi credentials in a secure way:
     #umapi: $(cat connector-umapi.yml)  # This runs the indicated command and uses
@@ -129,7 +129,7 @@ directory_users:
     # use a relative pathname, it is interpreted relative to the
     # location of this configuration file, not relative to the
     # working directory of your User Sync process.
-    ldap: "..\\test-config\\connector-ldap.yml"
+    # ldap: "..\\test-config\\connector-ldap.yml"
     # An alternate form for referencing the ldap configuration allows for storage
     # of the ldap credentials in a secure way:
     #ldap: $(cat connector-ldap.yml)  # This form runs the indicated command and uses
@@ -243,10 +243,6 @@ directory_users:
 #      adobe_groups:
 #        - "Classlink"
 
-#    - directory_group: "All Sea of Carag"
-#      adobe_groups:
-#        - "Sea of Carag"
-        
 # The limits section provides processing limits which can help ensure that
 # User Sync jobs do not exceed expected guardrails in their operation
 limits:
@@ -344,7 +340,7 @@ invocation_defaults:
   # For argument --adobe-only-user-list, the default is empty (no value).
   adobe_only_user_list:
   # For argument --connector, the default is 'ldap'.
-  connector: ldap
+  connector: oneroster
   # For argument --process-groups, the default is False (don't process).
   # If you set this default to True, you can supply the argument
   # --no-process-groups to override the default.
