simple group mappings refactored --jira

--- a/oneroster-config/connector-oneroster.yml
+++ b/oneroster-config/connector-oneroster.yml
@@ -25,10 +25,10 @@ client_secret: '10332e330b2e364020179021'
 #All users filter
 all_users_filter: 'users'
 
-
+#Simple Group Mapping
 # When simplifying user group mappings, you may choose the default values that are appended to your group_name
-# ie: a English class is specified with the group mappings, after default values below are applied,
-# "English" will turn into {default_group_filter}::English::{default_user_filter}
+# ie: When an English class is specified within the group mappings, after default values below are applied,
+# "English" will be {default_group_filter}::English::{default_user_filter}
 default_group_filter: 'classes'
 
 default_user_filter: 'students'
