--- a/oneroster-config/oneroster-user-sync-config.yml
+++ b/oneroster-config/oneroster-user-sync-config.yml
@@ -180,6 +180,9 @@ directory_users:
 #      adobe_groups:
 #        - "Classlink"
 #
+    - directory_group: "xxx"
+      adobe_groups:
+        - "Classlink_dont_fill"
     # Courses are working!!
     - directory_group: "courses::English 9::students"
       adobe_groups:
@@ -188,65 +191,65 @@ directory_users:
     - directory_group: "courses::English 9::teachers"
       adobe_groups:
         - "Classlink_dont_fill"
-##
-#    - directory_group: "classes::ELA 6 (6A ELA)::students"
-#      adobe_groups:
-#        - "Classlink_dont_fill"
+#
+    - directory_group: "classes::ELA 6 (6A ELA)::students"
+      adobe_groups:
+        - "Classlink_dont_fill"
 
     - directory_group: "ELA 6 (6A ELA)"
       adobe_groups:
         - "Classlink_dont_fill"
-#
-    - directory_group: "classes::ELA 6 (6A ELA)::teachers"
-      adobe_groups:
-        - "Classlink_dont_fill"
-#
-    - directory_group: "schools::cLasslink Elementary schOOl::students"
-      adobe_groups:
-        - "Classlink_dont_fill"
-#
-#   #Won't work since a class does not have teachers associated to it
-    - directory_group: "courses::Phy-102::teachers"
-      adobe_groups:
-        - "Classlink_dont_fill"
 ##
-#
-    - directory_group: "classes::Physics II - Spring::teachers"
-      adobe_groups:
-        - "Classlink"
-
-
-    - directory_group: "classes::Geography I - Spring::students"
-      adobe_groups:
-        - "Classlink"
-
-    - directory_group: "classes::Art I - Fall::students"
-      adobe_groups:
-        - "Classlink"
-
-    - directory_group: "classes::Art I - Fall::teachers"
-      adobe_groups:
-        - "Classlink"
-#
-    - directory_group: "courses::Alg-101::students"
-      adobe_groups:
-        - "Classlink"
+#    - directory_group: "classes::ELA 6 (6A ELA)::teachers"
+#      adobe_groups:
+#        - "Classlink_dont_fill"
 ##
-    - directory_group: "classes::Geography III - Spring::students"
-      adobe_groups:
-        - "Classlink"
-
-    - directory_group: "classes::Algebra I - Fall::students"
-      adobe_groups:
-        - "Classlink"
+#    - directory_group: "schools::cLasslink Elementary schOOl::students"
+#      adobe_groups:
+#        - "Classlink_dont_fill"
+##
+##   #Won't work since a class does not have teachers associated to it
+#    - directory_group: "courses::Phy-102::teachers"
+#      adobe_groups:
+#        - "Classlink_dont_fill"
+###
+##
+#    - directory_group: "classes::Physics II - Spring::teachers"
+#      adobe_groups:
+#        - "Classlink"
 #
-    - directory_group: "schools::Spring Valley Elementary School::students"
-      adobe_groups:
-        - "Classlink"
-
-    - directory_group: "schools::Woodland Elementary School::students"
-      adobe_groups:
-        - "Classlink"
+#
+#    - directory_group: "classes::Geography I - Spring::students"
+#      adobe_groups:
+#        - "Classlink"
+#
+#    - directory_group: "classes::Art I - Fall::students"
+#      adobe_groups:
+#        - "Classlink"
+#
+#    - directory_group: "classes::Art I - Fall::teachers"
+#      adobe_groups:
+#        - "Classlink"
+##
+#    - directory_group: "courses::Alg-101::students"
+#      adobe_groups:
+#        - "Classlink"
+###
+#    - directory_group: "classes::Geography III - Spring::students"
+#      adobe_groups:
+#        - "Classlink"
+#
+#    - directory_group: "classes::Algebra I - Fall::students"
+#      adobe_groups:
+#        - "Classlink"
+##
+#    - directory_group: "schools::Spring Valley Elementary School::students"
+#      adobe_groups:
+#        - "Classlink"
+#
+#    - directory_group: "schools::Woodland Elementary School::students"
+#      adobe_groups:
+#        - "Classlink"
 
 # The limits section provides processing limits which can help ensure that
 # User Sync jobs do not exceed expected guardrails in their operation
