--- a/oneroster-config/connector-oneroster.yml
+++ b/oneroster-config/connector-oneroster.yml
@@ -6,9 +6,18 @@
 # This sample file contains all of the settable options for this protocol.
 # It is recommended that you make a copy of this file and edit it for your needs.
 
+# Classlink
+
+platform: 'classlink'
 client_id: '0fc7e35773c1fffd32579507'
 client_secret: '10332e330b2e364020179021'
 host: "https://adobe-ca-v2.oneroster.com/ims/oneroster/v1p1/"
+
+# Clever
+
+#platform: 'clever'
+#client_id: '5d8a7b5eff6cbe25bc6e'
+#client_secret: 'ec6d2c060987e32cbe785f7f1a58a307a04cf0a4'
 
 # Connection Settings
 #(required, no default)
@@ -43,7 +52,8 @@ all_users_filter: 'users'
 
 # (optional, default value given below)
 # api call page size.  Adjusting this will adjust the frequency of API calls made to the server
-limit: '100'
+page_size: 100
+max_user_limit: 0
 
 # # (optional, default value given below) user_email_format
 # user_email_format specifies how to construct a user's email address by
