--- a/oneroster-config/connector-oneroster.yml
+++ b/oneroster-config/connector-oneroster.yml
@@ -8,16 +8,16 @@
 
 # Classlink
 
-platform: 'classlink'
-client_id: '0fc7e35773c1fffd32579507'
-client_secret: '10332e330b2e364020179021'
-host: "https://adobe-ca-v2.oneroster.com/ims/oneroster/v1p1/"
+#platform: 'classlink'
+#client_id: '0fc7e35773c1fffd32579507'
+#client_secret: '10332e330b2e364020179021'
+#host: "https://adobe-ca-v2.oneroster.com/ims/oneroster/v1p1/"
 
 # Clever
 
-#platform: 'clever'
-#client_id: '5d8a7b5eff6cbe25bc6e'
-#client_secret: 'ec6d2c060987e32cbe785f7f1a58a307a04cf0a4'
+platform: 'clever'
+client_id: '5d8a7b5eff6cbe25bc6e'
+client_secret: 'ec6d2c060987e32cbe785f7f1a58a307a04cf0a4'
 
 # Connection Settings
 #(required, no default)
