--- a/oneroster-config/connector-oneroster.yml
+++ b/oneroster-config/connector-oneroster.yml
@@ -47,25 +47,57 @@
 # all users filter.  Use this with the --users all command line option to target all users
 # all_users_filter: 'users'
 
-connection:
-  platform: 'classlink'
-  client_id: '0fc7e35773c1fffd32579507'
-  client_secret: '10332e330b2e364020179021'
-  host: "https://adobe-ca-v2.oneroster.com/ims/oneroster/v1p1/"
 
-  #access_token: 'TEST_TOKEN'
-  page_size: 1000
-  max_user_count: 0
 
-schema:
-  match: 'name'
-  key_identifier: 'id'
-  all_users_filter: 'users'
-  default_group_filter: 'courses'
-  default_user_filter: 'students'
+############# Clever test information #############
+#
+#connection:
+#  platform: 'clever'
+#  client_id: '5d8a7b5eff6cbe25bc6e'
+#  client_secret: 'ec6d2c060987e32cbe785f7f1a58a307a04cf0a4'
+#  host: 'https://api.clever.com/v2.1/'
+#
+#  access_token: 'TEST_TOKEN'
+#  page_size: 3000
+#  max_user_count: 0
+#
+#schema:
+#  match_groups_by: 'name'
+#  key_identifier: 'id'
+#  all_users_filter: 'users'
+#  default_group_filter: 'sections'
+#  default_user_filter: 'students'
+
+######################################################
+
+
+
+
+############# Classlink test information #############
+
+#connection:
+#  platform: 'classlink'
+#  client_id: '0fc7e35773c1fffd32579507'
+#  client_secret: '10332e330b2e364020179021'
+#  host: "https://adobe-ca-v2.oneroster.com/ims/oneroster/v1p1/"
+#
+#  #access_token: 
+#  page_size: 3000
+#  max_user_count: 0
+#
+#schema:
+#  match_groups_by: 'name'
+#  key_identifier: 'sourcedId'
+#  all_users_filter: 'users'
+#  default_group_filter: 'classes'
+#  default_user_filter: 'students'
+
+######################################################
+
+
+
 
 # fields below are all optional
-
 # # (optional, default value given below) user_email_format
 # user_email_format specifies how to construct a user's email address by
 # combining constant strings with the values of specific Okta profile attributes.
@@ -75,6 +107,7 @@ schema:
 # NOTE: for this and every format setting, the constant strings must be in
 # the encoding specified by the string_encoding setting, above.
 #user_email_format: "{email}"
+user_email_format: "{familyName}.{givenName}@resistanceisfutile.net"
 
 # (optional, no default) user_domain_format
 # user_domain_format is analogous to user_email_format in syntax, but it
