match_groups_by added

--- a/oneroster-config/oneroster-user-sync-config.yml
+++ b/oneroster-config/oneroster-user-sync-config.yml
@@ -215,6 +215,12 @@ directory_users:
 
 ######################################################
 
+############### Classlink test information #############
+
+    - directory_group: "schools::ClassLink HS::students"
+      adobe_groups:
+        - "All Students"
+
 
 
 
