--- a/oneroster-config/connector-oneroster.yml
+++ b/oneroster-config/connector-oneroster.yml
@@ -4,45 +4,44 @@
 
 ############# Clever test information #############
 
-#connection:
-#  platform: 'clever'
-#  client_id: '5d8a7b5eff6cbe25bc6e'
-#  client_secret: 'ec6d2c060987e32cbe785f7f1a58a307a04cf0a4'
-#  host: 'https://api.clever.com/v2.1/'
-#
-#  access_token: 'TEST_TOKEN'
-#  page_size: 3000
-#  max_user_count: 0
-#
-#schema:
-#  match_groups_by: 'name'
-#  key_identifier: 'id'
-#  all_users_filter: 'users'
-#  default_group_filter: 'sections'
-#  default_user_filter: 'students'
-#  include_only:
+connection:
+  platform: 'clever'
+  client_id: '5d8a7b5eff6cbe25bc6e'
+  client_secret: 'ec6d2c060987e32cbe785f7f1a58a307a04cf0a4'
+  host: 'https://api.clever.com/v2.1/'
 
+  access_token: 'TEST_TOKEN'
+  page_size: 3000
+  max_user_count: 0
+
+schema:
+  match_groups_by: 'name'
+  key_identifier: 'id'
+  all_users_filter: 'users'
+  default_group_filter: 'sections'
+  default_user_filter: 'students'
+  # include_only:
 
 ######################################################
 
 
 ############# Classlink test information #############
 
-connection:
-  platform: 'classlink'
-  client_id: '0fc7e35773c1fffd32579507'
-  client_secret: '10332e330b2e364020179021'
-  host: "https://adobe-ca-v2.oneroster.com/ims/oneroster/v1p1/"
-  page_size: 3000
-  max_user_count: 0
-
-schema:
-  match_groups_by: 'title'
-  key_identifier: 'sourcedId'
-  all_users_filter: 'users'
-  default_group_filter: 'classes'
-  default_user_filter: 'students'
-  include_only:
+#connection:
+#  platform: 'classlink'
+#  client_id: '0fc7e35773c1fffd32579507'
+#  client_secret: '10332e330b2e364020179021'
+#  host: "https://adobe-ca-v2.oneroster.com/ims/oneroster/v1p1/"
+#  page_size: 3000
+#  max_user_count: 0
+#
+#schema:
+#  match_groups_by: 'title'
+#  key_identifier: 'sourcedId'
+#  all_users_filter: 'users'
+#  default_group_filter: 'classes'
+#  default_user_filter: 'students'
+#  include_only: {}
 
 ######################################################
 
